--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
       <div class="wrpr">
         <div class="card">
           <div class="image">
+            <img src="./imgs/album-01.jpg" alt="">
           </div>
           <div class="txt">
             <h3> lorem ipsum</h3>
@@ -162,12 +163,13 @@
             <div class="info">
               <i class="fas fa-heart like"></i>
               <i class="fas fa-share"></i>
-              <i class="fas fa-eye right"></i>
+              <a href="https://pin.it/2u8nieT" class="right"><i class="fab fa-pinterest"></i></a>
             </div>
           </div>
         </div>
         <div class="card">
           <div class="image">
+            <img src="./imgs/album-02.jpg" alt="">
           </div>
           <div class="txt">
             <h3> lorem ipsum</h3>
@@ -175,12 +177,13 @@
             <div class="info">
               <i class="fas fa-heart like"></i>
               <i class="fas fa-share"></i>
-              <i class="fas fa-eye right"></i>
+              <a href="https://pin.it/5NF6yf5" class="right"><i class="fab fa-pinterest"></i></a>
             </div>
           </div>
         </div>
         <div class="card">
           <div class="image">
+            <img src="./imgs/album-03.jpg" alt="">
           </div>
           <div class="txt">
             <h3> lorem ipsum</h3>
@@ -188,12 +191,13 @@
             <div class="info">
               <i class="fas fa-heart like"></i>
               <i class="fas fa-share"></i>
-              <i class="fas fa-eye right"></i>
+              <a href="https://pin.it/5NF6yf5" class="right"><i class="fab fa-pinterest"></i></a>
             </div>
           </div>
         </div>
         <div class="card">
           <div class="image">
+            <img src="./imgs/album-04.jpg" alt="">
           </div>
           <div class="txt">
             <h3> lorem ipsum</h3>
@@ -201,12 +205,14 @@
             <div class="info">
               <i class="fas fa-heart like"></i>
               <i class="fas fa-share"></i>
-              <i class="fas fa-eye right"></i>
+              <a href="https://pin.it/1fXX2Lt" class="right"><i class="fab fa-pinterest"></i></a>
+
             </div>
           </div>
         </div>
         <div class="card">
           <div class="image">
+            <img src="./imgs/album-05.jpg" alt="">
           </div>
           <div class="txt">
             <h3> lorem ipsum</h3>
@@ -214,12 +220,14 @@
             <div class="info">
               <i class="fas fa-heart like"></i>
               <i class="fas fa-share"></i>
-              <i class="fas fa-eye right"></i>
+              <a href="https://pin.it/28jTqn2" class="right"><i class="fab fa-pinterest"></i></a>
+
             </div>
           </div>
         </div>
         <div class="card">
           <div class="image">
+            <img src="./imgs/album-06.jpg" alt="">
           </div>
           <div class="txt">
             <h3> lorem ipsum</h3>
@@ -227,12 +235,15 @@
             <div class="info">
               <i class="fas fa-heart like"></i>
               <i class="fas fa-share"></i>
-              <i class="fas fa-eye right"></i>
+
+              <a href="https://pin.it/2akNyOh" class="right"><i class="fab fa-pinterest"></i></a>
+
             </div>
           </div>
         </div>
         <div class="card">
           <div class="image">
+            <img src="./imgs/album-07.jpg" alt="">
           </div>
           <div class="txt">
             <h3> lorem ipsum</h3>
@@ -240,11 +251,13 @@
             <div class="info">
               <i class="fas fa-heart like"></i>
               <i class="fas fa-share"></i>
-              <i class="fas fa-eye right"></i>
+              <a href="https://pin.it/6UJkVuG" class="right"><i class="fab fa-pinterest"></i></a>
             </div>
           </div>
         </div>
+        <a href="https://www.pinterest.com/">More</a>
       </div>
+
     </div>
   </div>
 
