added new features

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <!-- <li><a href="#gallery">gallery</a></li> -->
 
             <li><a href="#features">features</a></li>
+            <li><a href="#reviews">reviews</a></li>
             <li id="mega">
               <a href="#other">Links</a>
               <div class="mega-menu">
@@ -258,6 +259,165 @@
         <a href="https://www.pinterest.com/">More</a>
       </div>
 
+    </div>
+  </div>
+  <div class="features" id="features">
+    <div class="container">
+      <div class="main-heading">
+        <h2>
+          Features
+        </h2>
+        <p>subscribe the bundle you like</p>
+      </div>
+      <div class="content">
+        <div class="card">
+          <div class="title">
+            <h3>FREE</h3>
+            <span>0</span>
+          </div>
+          <div class="info">
+            <ul>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+
+              <li>Lorem ipsum <i class="fas fa-circle-xmark"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-xmark"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-xmark"></i></li>
+            </ul>
+          </div>
+          <a href="#" class="subscribe">subscribe</a>
+        </div>
+        <div class="card">
+          <div class="title">
+            <h3>PRO</h3>
+            <span>12</span>
+          </div>
+          <div class="info">
+            <ul>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-xmark"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-xmark"></i></li>
+            </ul>
+          </div>
+          <a href="#" class="subscribe">subscribe</a>
+        </div>
+        <div class="card gold">
+          <div class="title">
+            <h3>GOLD</h3>
+            <span>30</span>
+
+          </div>
+          <div class="info">
+            <ul>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+              <li>Lorem ipsum <i class="fas fa-circle-check"></i></li>
+            </ul>
+          </div>
+          <a href="#" class="subscribe">subscribe</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="reviews" id="reviews">
+    <div class="container">
+      <div class="main-heading">
+        <h2>Reviews</h2>
+        <p>What our customers think</p>
+      </div>
+      <div class="content">
+        <div class="wrpr">
+          <div class="card">
+            <img src="./imgs/album-06.jpg" alt="">
+            <div class="txt">
+              <h3 class="name">John Duo</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium deleniti sint repudiandae!</p>
+              <i class="fas fa-copy" title="copy"></i>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./imgs/album-03.jpg" alt="">
+            <div class="txt">
+              <h3 class="name">John Duo</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium deleniti sint repudiandae!</p>
+              <i class="fas fa-copy" title="copy"></i>
+            </div>
+          </div>
+
+          <div class="bullets">
+            <ul>
+              <li><a href="#" class="bullet"></a></li>
+              <li><a href="#" class="bullet active"></a></li>
+              <li><a href="#" class="bullet"></a></li>
+            </ul>
+          </div>
+
+
+        </div>
+        <div class="wrpr">
+          <div class="rate">
+            <h3 class="txt"> RAN MOURI</h3>
+            <span class="bar"><span class="fill" style="width: 60%" progress="60%"></span></span>
+          </div>
+          <div class="rate">
+            <h3 class="txt"> NAMI SWAN</h3>
+            <span class="bar"><span class="fill" style="width: 40%" progress="40%"></span></span>
+          </div>
+          <div class="rate">
+            <h3 class="txt"> KOMMI CHAN</h3>
+            <span class="bar"><span class="fill" progress="80%" style="width: 80%"></span></span>
+          </div>
+          <div class="rate">
+            <h3 class="txt"> SAKURA CHAN</h3>
+            <span class="bar"><span class="fill" progress="70%" style="width: 70%"></span></span>
+          </div>
+
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+
+  <div class="join-us">
+    <div class="wrpr">
+      <div class="container">
+        <div>
+          <div class="title">
+            <!-- <i class="fas fa-envelope fa-2x"></i>  -->
+            <h2>Join Us</h2>
+
+          </div>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+          <form action="#">
+            <input type="email" name="email" id="email" placeholder="Email">
+            <input type="submit" value="SUBSCRIBE" disabled>
+
+            <div class="agreement">
+              <input type="checkbox" class="custom-checkbox" name="agreement" id="agreement">
+              <label for="agreement">
+                I have read these <a href="#">rules and conditions</a>
+              </label>
+              <div class="warning">
+                <i class="fas fa-warning"></i>
+              </div>
+
+            </div>
+          </form>
+
+        </div>
+      </div>
     </div>
   </div>
 
