--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap"
     rel="stylesheet">
 </head>
 
@@ -73,26 +73,19 @@
             <li><a href="#album">album</a></li>
             <!-- <li><a href="#gallery">gallery</a></li> -->
 
-            <li><a href="#features">features</a></li>
+            <li><a href="#pricing">pricing</a></li>
             <li><a href="#reviews">reviews</a></li>
-            <li id="mega">
-              <a href="#other">Links</a>
-              <div class="mega-menu">
-                <div class="wrpr">
-                  <ul class="links">
-                    <li><a href="#"><i class="fas fa-home"></i>lorem ipsum</a></li>
-                    <li><a href="#"><i class="fas fa-computer"></i>lorem ipsum</a></li>
-                    <li><a href="#"><i class="fas fa-code"></i>lorem ipsum</a></li>
-                    <li><a href="#"><i class="fas fa-square"></i>lorem ipsum</a></li>
-                  </ul>
-                </div>
-              </div>
+            <li>
+              <a href="#other">
+                <i class="fas fa-link"></i>
+                Links
+              </a>
             </li>
           </ul>
         </nav>
         <div class="theme">
           <i class="fa fa-circle-half-stroke"></i>
-          <ul class="menu">
+          <ul class="menu" id="theme-menu">
             <li><i class="fas fa-wand-magic-sparkles"></i>OS default</li>
             <li><i class="fas fa-sun"></i>Light mode </li>
             <li><i class="fas fa-moon"></i>Dark mode</li>
@@ -100,7 +93,7 @@
         </div>
         <div class="user-menu">
           <i class="fas fa-user"></i>
-          <ul class="menu">
+          <ul class="menu" id="user-menu">
             <li><i class="fas fa-arrow-right-to-bracket"></i>Login</li>
             <li><i class="fas fa-square-plus"></i>Create account </li>
           </ul>
@@ -125,17 +118,13 @@
     <div class="container">
       <div class="wrpr">
         <div class="txt">
-          <h1>orange project</h1>
+          <h1>wanngut LABs</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, in quae nulla perspiciatis veritatis dicta
-            ea? Consectetur architecto animi facere nostrum eum vero explicabo, odio deleniti itaque.
+            I designed this page to apply what I've already learnt in web front end development courses. For now, I used
+            Sass for styling. Next, I'm gonna add some interactivity using JavaScript. Then, I'll start learning
+            ReactJS. This page has no context :D
           </p>
         </div>
-        <div class="artwork">
-          <!-- <div class="drawing"></div> -->
-          <!-- <div class="drawing"></div>  -->
-        </div>
-
       </div>
       <a href="#album" class="go-down" title="go-down">
         <i class="fas fa-angle-double-down fa-3x"></i>
@@ -167,7 +156,7 @@
             <h3> lorem ipsum</h3>
             <p>Lorem ipsum dolor sit amet.</p>
             <div class="info">
-              <i class="fas fa-heart like"></i>
+              <a href="#"> <i class="fas fa-heart like"></i> </a>
               <i class="fas fa-share"></i>
               <a href="https://pin.it/2u8nieT" class="right"><i class="fab fa-pinterest"></i></a>
             </div>
@@ -181,7 +170,7 @@
             <h3> lorem ipsum</h3>
             <p>Lorem ipsum dolor sit amet.</p>
             <div class="info">
-              <i class="fas fa-heart like"></i>
+              <a href="#"> <i class="fas fa-heart like"></i> </a>
               <i class="fas fa-share"></i>
               <a href="https://pin.it/5NF6yf5" class="right"><i class="fab fa-pinterest"></i></a>
             </div>
@@ -195,7 +184,7 @@
             <h3> lorem ipsum</h3>
             <p>Lorem ipsum dolor sit amet.</p>
             <div class="info">
-              <i class="fas fa-heart like"></i>
+              <a href="#"> <i class="fas fa-heart like"></i> </a>
               <i class="fas fa-share"></i>
               <a href="https://pin.it/5NF6yf5" class="right"><i class="fab fa-pinterest"></i></a>
             </div>
@@ -209,7 +198,7 @@
             <h3> lorem ipsum</h3>
             <p>Lorem ipsum dolor sit amet.</p>
             <div class="info">
-              <i class="fas fa-heart like"></i>
+              <a href="#"> <i class="fas fa-heart like"></i> </a>
               <i class="fas fa-share"></i>
               <a href="https://pin.it/1fXX2Lt" class="right"><i class="fab fa-pinterest"></i></a>
 
@@ -224,7 +213,7 @@
             <h3> lorem ipsum</h3>
             <p>Lorem ipsum dolor sit amet.</p>
             <div class="info">
-              <i class="fas fa-heart like"></i>
+              <a href="#"> <i class="fas fa-heart like"></i> </a>
               <i class="fas fa-share"></i>
               <a href="https://pin.it/28jTqn2" class="right"><i class="fab fa-pinterest"></i></a>
 
@@ -239,7 +228,7 @@
             <h3> lorem ipsum</h3>
             <p>Lorem ipsum dolor sit amet.</p>
             <div class="info">
-              <i class="fas fa-heart like"></i>
+              <a href="#"> <i class="fas fa-heart like"></i> </a>
               <i class="fas fa-share"></i>
 
               <a href="https://pin.it/2akNyOh" class="right"><i class="fab fa-pinterest"></i></a>
@@ -255,7 +244,7 @@
             <h3> lorem ipsum</h3>
             <p>Lorem ipsum dolor sit amet.</p>
             <div class="info">
-              <i class="fas fa-heart like"></i>
+              <a href="#"> <i class="fas fa-heart like"></i> </a>
               <i class="fas fa-share"></i>
               <a href="https://pin.it/6UJkVuG" class="right"><i class="fab fa-pinterest"></i></a>
             </div>
@@ -266,13 +255,14 @@
 
     </div>
   </div>
-  <div class="features" id="features">
+
+  <div class="pricing" id="pricing">
     <div class="container">
       <div class="main-heading">
         <h2>
-          Features
+          Pricing
         </h2>
-        <p>Subscribe the bundle you like</p>
+        <p>Choose the bundle you like</p>
       </div>
       <div class="content">
         <div class="card">
@@ -330,6 +320,72 @@
             </ul>
           </div>
           <a href="#" class="subscribe">subscribe</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="events">
+    <div class="container">
+      <div class="main-heading">
+        <h2>Let's Celebrate</h2>
+        <p>Share your memories</p>
+      </div>
+      <div class="content">
+        <div class="image">
+        </div>
+        <div class="info">
+          <div class="timer">
+            <div class="days">
+              <span>15</span>
+              <span>days</span>
+            </div>
+            <div class="hours">
+              <span>47</span>
+              <span>hours</span>
+            </div>
+            <div class="minutes">
+              <span>24</span>
+              <span>minutes</span>
+            </div>
+          </div>
+          <div class="txt">
+            <h4>party together</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed totam illo, repudiandae vero assumenda
+              sequi?</p>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
+  <div class="join-us">
+    <div class="wrpr">
+      <div class="container">
+        <div>
+          <div class="title">
+            <!-- <i class="fas fa-envelope fa-2x"></i>  -->
+            <h2>Join Us</h2>
+          </div>
+          <p>Get notified about events and special offers</p>
+          <form action="#">
+            <input type="email" name="email" id="email" placeholder="Email">
+            <br>
+            <div class="agreement">
+              <input type="checkbox" class="custom-checkbox" name="agreement" id="agreement">
+              <label for="agreement">
+                I have read these <a href="#">rules and conditions</a>
+              </label>
+              <div class="warning">
+                <i class="fas fa-warning"></i>
+              </div>
+            </div>
+            <input type="submit" value="SUBSCRIBE" disabled>
+          </form>
+
         </div>
       </div>
     </div>
@@ -395,37 +451,21 @@
     </div>
   </div>
 
-  <div class="join-us">
-    <div class="wrpr">
-      <div class="container">
-        <div>
-          <div class="title">
-            <!-- <i class="fas fa-envelope fa-2x"></i>  -->
-            <h2>Join Us</h2>
-          </div>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
-          <form action="#">
-            <input type="email" name="email" id="email" placeholder="Email">
-            <br>
-            <div class="agreement">
-              <input type="checkbox" class="custom-checkbox" name="agreement" id="agreement">
-              <label for="agreement">
-                I have read these <a href="#">rules and conditions</a>
-              </label>
-              <div class="warning">
-                <i class="fas fa-warning"></i>
-              </div>
-            </div>
-            <input type="submit" value="SUBSCRIBE" disabled>
-          </form>
-
-        </div>
-      </div>
+  <footer>
+    <div class="container">
+      <span>Designed with <i class="fas fa-heart"></i> by <a href="https://twitter.com/qassasahmed96">Ahmed Mahmoud</a>
+        as a part of wanngutLABs</span>
+      <ul class="social">
+        <li><a href="https://twitter.com/qassasahmed96" target="_blank"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="https://github.com/qassasahmed96" target="_blank"><i class="fab fa-github"></i></a></li>
+      </ul>
     </div>
-  </div>
+  </footer>
+
 
   <!-- font awesome script -->
   <script src="js/all.min.js"></script>
+
 </body>
 
 </html>
